<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.countdown.DurationActivity">

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/hours_text"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextHours"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_margin="20sp"
        android:inputType="number"
        style="@android:style/Widget.EditText"
        app:layout_constraintBaseline_toBaselineOf="@id/hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/hours" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/minutes_text"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hours" />

    <EditText
        android:id="@+id/editTextMinutes"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_margin="20sp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/minutes" />

    <TextView
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/seconds_text"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minutes" />

    <EditText
        android:id="@+id/editTextSeconds"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_margin="20sp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/seconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/seconds" />

    <Button
        android:id="@+id/validationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickValidate"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>